# CECPQ2b

./: .travis.yml  CECPQ2b_for_BoringSSL_706da620b248615b709e71b36a31312f87a2c692.patch  CMakeLists.txt  README.md
.circleci/: config.yml
3rd/sha2/: sha256.h
includes/sike/: sike.h
src/internal/utils/: cycles.h
src/p434/: sike.c  utils.h
src/sike-p434-sha256/: fpx.c  sike.c  utils.h
src/sike-p434-sha256/asm/: fp-aarch64.pl  fp-armv8.pl  fp-x86_64.pl  fp_generic.c
test/: p434.cc  speed434.cc
